// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxMenuItem should render 1`] = `
<ListBoxMenuItem
  isActive={false}
  isCategoryItem={false}
  isHighlighted={false}
>
  <div
    aria-selected={false}
    className="bx--list-box__menu-item"
    role="option"
  >
    <div
      className="bx--list-box__menu-item__option"
    >
      <span>
        ListBox.MenuItem
      </span>
    </div>
  </div>
</ListBoxMenuItem>
`;

exports[`ListBoxMenuItem should render 2`] = `
<ListBoxMenuItem
  isActive={true}
  isCategoryItem={false}
  isHighlighted={false}
>
  <div
    aria-selected={true}
    className="bx--list-box__menu-item bx--list-box__menu-item--active"
    role="option"
  >
    <div
      className="bx--list-box__menu-item__option"
    >
      <span>
        ListBox.MenuItem
      </span>
    </div>
  </div>
</ListBoxMenuItem>
`;

exports[`ListBoxMenuItem should render 3`] = `
<ListBoxMenuItem
  isActive={false}
  isCategoryItem={false}
  isHighlighted={true}
>
  <div
    aria-selected={false}
    className="bx--list-box__menu-item bx--list-box__menu-item--highlighted"
    role="option"
  >
    <div
      className="bx--list-box__menu-item__option"
    >
      <span>
        ListBox.MenuItem
      </span>
    </div>
  </div>
</ListBoxMenuItem>
`;

exports[`ListBoxMenuItem should render 4`] = `
<ListBoxMenuItem
  isActive={false}
  isCategory={true}
  isCategoryItem={false}
  isHighlighted={false}
>
  <div
    aria-selected={false}
    className="bx--list-box__menu-item"
    isCategory={true}
    role="option"
  >
    <div
      className="bx--list-box__menu-item__option"
    >
      <span>
        ListBox.MenuItem
      </span>
    </div>
  </div>
</ListBoxMenuItem>
`;
